--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,6 @@
     "browser": true,
     "es6": true
   },
-  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 8,
     "sourceType": "module",
@@ -15,11 +14,17 @@
   "plugins": ["prettier", "react"],
   "extends": ["prettier", "eslint:recommended", "plugin:react/recommended"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "parser": "flow"
+      }
+    ]
   },
   "settings": {
     "react": {
-      "version": "detetect"
+      "version": "detect"
     }
   }
 }
