--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   "plugins": ["prettier", "react"],
   "extends": ["prettier", "eslint:recommended", "plugin:react/recommended"],
   "rules": {
+    "no-unused-vars": "warn",
     "prettier/prettier": [
       "error",
       {
