--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "es6": true
   },
   "parserOptions": {
-    "ecmaVersion": 8,
+    "ecmaVersion": 9,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true,
@@ -19,7 +19,8 @@
       "error",
       {
         "singleQuote": true,
-        "parser": "flow"
+        "parser": "flow",
+        "DoubleQuote": false
       }
     ]
   },
